# modbus_client

./: README.md  pyproject.toml
modbus_client/: __init__.py  cli.py  client.py  exceptions.py
